2004-04-13  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-delete.c, src/gtkam-delete.h: Change to use
	GtkDialog layout, to fit with Gnome HIG.
	
2004-02-15  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-save.c: Fix compile errors.

2004-02-15  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-save.c: If an error occurs during saving,
	abort.
	* src/gtkam-tree.c: Make popup menu-entries less terse.
	* src/gtkam-list.c: Make popup menu-entries less terse.

2004-02-11  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-viewer.c: Fixed compiler warnings, removed
	redundant printf()s.

2004-02-10  Andrew Burton <adburton@users.sourceforge.net>

	* help/C/gtkam.xml: Minor changes prior to release.

2004-02-04  Andrew Burton <adburton@users.sourceforge.net>

	* Makefile.am: Add files NEWS, README and TODO to
	documentation directory.

2004-02-02  Andrew Burton <adburton@users.sourceforge.net>

	*src/gtkam-main.c: Add 'Refresh' button (fixes SF feature
	request 846947)

2004-02-01  Andrew Burton <adburton@users.sourceforge.net>

	GUI improvements to match Gnome HIG:

	* src/gtkam-save.c
	* src/gtkam-error.c
	* src/gtkam-error.h
	* src/gtkam-port.c

2004-01-26  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-save.c: Applied patch from Nils Rennebarth
	(nilsr@users.sourceforge.net) to make save dialog remember
	defaults (fixes SF feature request 865910).

2004-01-22  Andrew Burton <adburton@users.sourceforge.net>

	* Makefile.am: Add EXTRA_DIST clause so gtkam.desktop and
	gtkam.png are included with tarballs.
	* src/gtkam-list.c: Applied patch from Nils Rennebarth
	(nilsr@users.sourceforge.net) to make save progress transient
	to the main window.

2004-01-21  Andrew Burton <adburton@users.sourceforge.net>

	* configure.in: Fix missing Makefile clauses for omf-install
	and help subdirectories.

2004-01-17  Marcus Meissner <marcus@jet.franken.de>
	
	* src/gtkam-save.c: Fixed small memleak.
	